ip_blocker/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crazy-server  
  namespace: trialnamespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crazy-server
  template:
    metadata:
      labels:
        app: crazy-server
    spec:
      imagePullSecrets:
      - name: test1  
      containers:
      - name: crazy-server
        image: marcuskimathi/crazy-server:latest
        ports:
        - containerPort: 3000
