ip_blocker/k8s/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: crazy-server-service
  namespace: trialnamespace
spec:
  selector:
    app: crazy-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
