ip_blocker/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crazy-server-service
  namespace: trialnamespace
spec:
  selector:
    app: crazy-server
  ports:
    - protocol: TCP
      port: 80                # Port exposed to the outside world
      targetPort: 3000        # Port inside the container
      nodePort: 30001         # External port on the node
  type: NodePort              # Expose service externally via NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: ipblocker-service
  namespace: trialnamespace
spec:
  selector:
    app: ipblocker
  ports:
    - protocol: TCP
      port: 80                # Port exposed to the outside world
      targetPort: 3000        # Port inside the container
      nodePort: 30002         # External port on the node
  type: NodePort              # Expose service externally via NodePort
