ip_blocker/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crazy-server-ingress
  namespace: trialnamespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: crazy.local  # This is the domain you will use in the browser
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crazy-server-service  # Ensure this matches the name of your service
                port:
                  number: 80  # This should be the same as the exposed port on your service
